@@ -13,7 +13,6 @@ depends:
 - sources/patch1.bst
 - sources/patch2.bst
 - sources/patch3.bst
-- sources/pip1.bst
 - sources/remote1.bst
 - sources/remote2.bst
 - sources/tar1.bst
